# zero2prod

./: Cargo.toml  Dockerfile  configuration.yaml  log.txt
.github/workflows/: general.yml  rust.yml
migrations/: 20250810082659_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  configurations.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
