[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Ohad Katz ohad87@proton.me"]
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.14.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.53.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.13.4"
